force-app/main/default/objects/Case/fields/Active_Form__c.field-meta.xml
<CustomField>
    <fullName>Active_Form__c</fullName>
    <description>For resuming the last worked on form in QFR.</description>
    <label>Active Form</label>
    <length>100</length>
    <type>Text</type>
</CustomField>