force-app/main/default/objects/Case/fields/Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Type__c</fullName>
    <description>Care Type field pulled in from Account Object</description>
    <formula>TEXT(Account.Care_Type__c)</formula>
    <label>Care Type</label>
    <type>Text</type>
</CustomField>