force-app/main/default/objects/Case/fields/Case_DM_Key__c.field-meta.xml
<CustomField>
    <fullName>Case_DM_Key__c</fullName>
    <externalId>true</externalId>
    <label>Case_DM_Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>