force-app/main/default/objects/Case/fields/Comments_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Comments_Assessment__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>