force-app/main/default/objects/Case/fields/Comments_RFI__c.field-meta.xml
<CustomField>
    <fullName>Comments_RFI__c</fullName>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>