force-app/main/default/objects/Case/fields/Current_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Current_Reporting_Period__c</fullName>
    <description>Display Current Reporting Period</description>
    <formula>Reporting_Period__r.Current_Reporting_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Display Current Reporting Period</inlineHelpText>
    <label>Current Reporting Period</label>
    <type>Checkbox</type>
</CustomField>