force-app/main/default/objects/Case/fields/Date_of_Reply__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Reply__c</fullName>
    <label>Date of Reply</label>
    <type>Date</type>
</CustomField>