force-app/main/default/objects/Case/fields/Date_Reconsideration_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Reconsideration_Requested__c</fullName>
    <label>Date Reconsideration Requested</label>
    <type>Date</type>
</CustomField>