force-app/main/default/objects/Case/fields/Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested__c</fullName>
    <label>Date RFI Sent</label>
    <type>Date</type>
</CustomField>