force-app/main/default/objects/Case/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer Experience Report</fullName>
            </value>
            <value>
                <fullName>Quality Indicator</fullName>
            </value>
            <value>
                <fullName>Care Minutes</fullName>
            </value>
            <value>
                <fullName>Service Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>