force-app/main/default/objects/Case/fields/Early_Alert__c.field-meta.xml
<CustomField>
    <fullName>Early_Alert__c</fullName>
    <formula>IF(
ISPICKVAL( Status , &quot;Submitted&quot;)&amp;&amp; NOT(ISBLANK( Number_of_Yes_Responses__c  )),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),
IF(
ISPICKVAL( Status , &quot;Re-submitted&quot;)&amp;&amp; NOT(ISBLANK( Number_of_Yes_Responses__c  )),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),&quot;&quot;))</formula>
    <label>Early Alert Flag</label>
    <type>Text</type>
</CustomField>