force-app/main/default/objects/Case/fields/Expected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion_Date__c</fullName>
    <description>This is the date the Provider will submit QFR</description>
    <label>Expected Completion Date</label>
    <type>Date</type>
</CustomField>