force-app/main/default/objects/Case/fields/Expected_Resubmission_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Resubmission_Date__c</fullName>
    <label>Expected Resubmission Date</label>
    <type>Date</type>
</CustomField>