force-app/main/default/objects/Case/fields/Extension_Reason__c.field-meta.xml
<CustomField>
    <fullName>Extension_Reason__c</fullName>
    <label>Extension Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COVID</fullName>
            </value>
            <value>
                <fullName>Natural Disaster</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>IT Systems</fullName>
            </value>
            <value>
                <fullName>Staff Issues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>