force-app/main/default/objects/Case/fields/Follow_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Status__c</fullName>
    <label>Follow Up Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider unavailable</fullName>
            </value>
            <value>
                <fullName>Incomplete email sent</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>RC reissue</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Waiting Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>