force-app/main/default/objects/Case/fields/Last_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Submission_Date__c</fullName>
    <description>Date to capture the last submission date for provider submission cases.</description>
    <label>Last Submission Date</label>
    <type>Date</type>
</CustomField>