force-app/main/default/objects/Case/fields/ListView_NAPSID__c.field-meta.xml
<CustomField>
    <fullName>ListView_NAPSID__c</fullName>
    <description>For filtering the case list view by NAPS ID. updated by flow</description>
    <label>ListView NAPSID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>