force-app/main/default/objects/Case/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>RFI Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>