force-app/main/default/objects/Case/fields/NAPS_Id__c.field-meta.xml
<CustomField>
    <fullName>NAPS_Id__c</fullName>
    <description>Use to populate NAPS ID to only use for Case list view</description>
    <label>NAPS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>