force-app/main/default/objects/Case/fields/NAPSID__c.field-meta.xml
<CustomField>
    <fullName>NAPSID__c</fullName>
    <description>Use to pull in NAPS ID for QA View</description>
    <formula>Account.Integration_ID__c</formula>
    <label>NAPS ID</label>
    <type>Text</type>
</CustomField>