force-app/main/default/objects/Case/fields/Number_of_Yes_Responses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Yes_Responses__c</fullName>
    <description>Count the number of Viability question provider answer Yes</description>
    <label>Number of Yes Responses</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>