force-app/main/default/objects/Case/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <externalId>true</externalId>
    <label>Oracle ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>