force-app/main/default/objects/Case/fields/Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Org_URL__c</fullName>
    <description>custom meta data types</description>
    <formula>IF($Organization.Id = &apos;00D9h0000009Mfd&apos;, $CustomMetadata.URL_Metadata__mdt.Dev_Org_URL.URL__c, IF($Organization.Id = &apos;00D9p000000gCj7&apos;, $CustomMetadata.URL_Metadata__mdt.Dit_Org_URL.URL__c,$CustomMetadata.URL_Metadata__mdt.Prod_Org_URL.URL__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org URL</label>
    <type>Text</type>
</CustomField>