force-app/main/default/objects/Case/fields/PaymentReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>PaymentReferenceNumber__c</fullName>
    <formula>ApplicationId__r.ApplicationReferenceNumberF__c</formula>
    <label>Payment Reference Number</label>
    <type>Text</type>
</CustomField>