force-app/main/default/objects/Case/fields/Provider_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Contact_Name__c</fullName>
    <formula>Account.PersonContact.AccountId</formula>
    <label>Provider Contact Name</label>
    <type>Text</type>
</CustomField>