force-app/main/default/objects/Case/fields/Provider_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name_Text__c</fullName>
    <description>Use to populate Provider Name (Account Name) to use on Case list view only</description>
    <label>Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>