force-app/main/default/objects/Case/fields/QA_Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>QA_Assessment_Status__c</fullName>
    <label>QA Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Finalised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>