force-app/main/default/objects/Case/fields/QA_Outcome__c.field-meta.xml
<CustomField>
    <fullName>QA_Outcome__c</fullName>
    <formula>TEXT(Form__r.QA_Outcome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QA Outcome</label>
    <type>Text</type>
</CustomField>