force-app/main/default/objects/Case/fields/QA_Outcome_Summary__c.field-meta.xml
<CustomField>
    <fullName>QA_Outcome_Summary__c</fullName>
    <description>QA Outcome and comments of all forms</description>
    <label>QA Outcome Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>