force-app/main/default/objects/Case/fields/QFR_Care_Type__c.field-meta.xml
<CustomField>
    <fullName>QFR_Care_Type__c</fullName>
    <label>QFR Care Type</label>
    <type>TextArea</type>
</CustomField>