force-app/main/default/objects/Case/fields/QFR_RP_Locked__c.field-meta.xml
<CustomField>
    <fullName>QFR_RP_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QFR Submission Locked</label>
    <type>Checkbox</type>
</CustomField>