force-app/main/default/objects/Case/fields/QFR_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>QFR_Submission_Date__c</fullName>
    <label>QFR Submission Date</label>
    <type>Date</type>
</CustomField>