force-app/main/default/objects/Case/fields/Quarter_Number__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Number__c</fullName>
    <description>Returns a number between 1 to 4 indicating the quarter number for the current month.</description>
    <formula>IF( MONTH(Reporting_Period__r.Start_Date__c) &gt;= 1 &amp;&amp; MONTH(Reporting_Period__r.End_Date__c) &lt;= 3, 3,
IF( MONTH(Reporting_Period__r.Start_Date__c) &gt;= 4 &amp;&amp; MONTH(Reporting_Period__r.End_Date__c) &lt;= 6, 4,
IF( MONTH(Reporting_Period__r.Start_Date__c) &gt;= 7 &amp;&amp; MONTH(Reporting_Period__r.End_Date__c) &lt;= 9, 1,
IF( MONTH(Reporting_Period__r.Start_Date__c) &gt;= 10 &amp;&amp; MONTH(Reporting_Period__r.End_Date__c) &lt;= 12, 2, null)
) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns a number between 1 to 4 indicating the quarter number for the current month.</inlineHelpText>
    <label>Quarter Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>