force-app/main/default/objects/Case/fields/Reason_for_Extension_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Extension_Request__c</fullName>
    <description>Reason for extension</description>
    <label>Reason for Extension Request</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>