force-app/main/default/objects/Case/fields/Reconsideration_Date_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Reconsideration_Date_Accepted__c</fullName>
    <label>Reconsideration Date Accepted</label>
    <type>Date</type>
</CustomField>