force-app/main/default/objects/Case/fields/Report_Action__c.field-meta.xml
<CustomField>
    <fullName>Report_Action__c</fullName>
    <description>This field tracks the report action on the provider portal</description>
    <label>Report Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
                <default>true</default>
                <label>Start</label>
            </value>
            <value>
                <fullName>Resume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>