force-app/main/default/objects/Case/fields/Reporting_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Due_Date__c</fullName>
    <formula>Reporting_Period__r.QFR_Reporting_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QFR Due Date</label>
    <type>Date</type>
</CustomField>