force-app/main/default/objects/Case/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pull from Reporting Perion Object.</description>
    <label>Reporting Period ID</label>
    <referenceTo>Reporting_Period__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>