force-app/main/default/objects/Case/fields/Reporting_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_End_Date__c</fullName>
    <formula>Reporting_Period__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Period End Date</label>
    <type>Date</type>
</CustomField>