force-app/main/default/objects/Case/fields/Reporting_Period_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_Quarterly__c</fullName>
    <description>Display specific quarter of the report</description>
    <formula>Reporting_Period__r.RP_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Display specific quarter of the report</inlineHelpText>
    <label>Reporting Period</label>
    <type>Text</type>
</CustomField>