force-app/main/default/objects/Case/fields/Request_for_Extension__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Provider has request for extension</description>
    <label>Extension Request Flag</label>
    <type>Checkbox</type>
</CustomField>