force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informal Request</fullName>
            </value>
            <value>
                <fullName>Request under Section 63C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>