force-app/main/default/objects/Case/fields/RFI_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>RFI_Due_Date__c</fullName>
    <label>RFI Due Date</label>
    <type>Date</type>
</CustomField>