force-app/main/default/objects/Case/fields/RFI_Response_Flag__c.field-meta.xml
<CustomField>
    <fullName>RFI_Response_Flag__c</fullName>
    <formula>IF(RecordType.DeveloperName == &quot;Request_for_Information&quot; &amp;&amp; ISPICKVAL(Status, &quot;RFI Issued&quot;) &amp;&amp; Today() &lt; RFI_Due_Date__c, &apos;RFI Response due in&apos; +&apos; &apos;+ Text(RFI_Due_Date__c-Today()) +&apos; &apos;+ &apos;days&apos;,
IF(RecordType.DeveloperName == &quot;Request_for_Information&quot; &amp;&amp; ISPICKVAL(Status, &quot;RFI Issued&quot;) &amp;&amp; RFI_Due_Date__c &lt; Today(),&apos;RFI Response overdue by&apos; +&apos; &apos;+ Text(Today()-RFI_Due_Date__c) +&apos; &apos;+ &apos;days&apos;,null))</formula>
    <label>RFI Response Flag</label>
    <type>Text</type>
</CustomField>