force-app/main/default/objects/Case/fields/RFISentToReviewerOrDelegate__c.field-meta.xml
<CustomField>
    <fullName>RFISentToReviewerOrDelegate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFI Sent to Reviewer or Delegate</label>
    <type>Checkbox</type>
</CustomField>