force-app/main/default/objects/Case/fields/SkipLateSubmissionEmail__c.field-meta.xml
<CustomField>
    <fullName>SkipLateSubmissionEmail__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Exclude From Overdue Notice Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>