force-app/main/default/objects/Case/fields/STAR_Rating_History__c.field-meta.xml
<CustomField>
    <fullName>STAR_Rating_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>STAR Rating History</label>
    <referenceTo>STAR_Rating_History__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>