force-app/main/default/objects/Case/fields/Submission_Count__c.field-meta.xml
<CustomField>
    <fullName>Submission_Count__c</fullName>
    <description>Field to capture the number of submission count on a QFR case</description>
    <label>Submission Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>