force-app/main/default/objects/Case/fields/Submission_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Due_Date__c</fullName>
    <formula>Form__r.Submission_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Due Date</label>
    <type>Date</type>
</CustomField>