force-app/main/default/objects/Case/recordTypes/Dispute_Management.recordType-meta.xml
<RecordType>
    <fullName>Dispute_Management</fullName>
    <active>true</active>
    <businessProcess>Star Rating Dispute</businessProcess>
    <label>Dispute Management</label>
</RecordType>