force-app/main/default/objects/Case/recordTypes/QFR.recordType-meta.xml
<RecordType>
    <fullName>QFR</fullName>
    <active>true</active>
    <businessProcess>QFR</businessProcess>
    <description>This is for Quarterly Financial Reports</description>
    <label>QFR</label>
</RecordType>