force-app/main/default/objects/Case/recordTypes/Request_for_Information.recordType-meta.xml
<RecordType>
    <fullName>Request_for_Information</fullName>
    <active>true</active>
    <businessProcess>Request for Information Support Process</businessProcess>
    <label>Request_for_Information</label>
</RecordType>