force-app/main/default/objects/Case/recordTypes/Request_for_Reconsideration.recordType-meta.xml
<RecordType>
    <fullName>Request_for_Reconsideration</fullName>
    <active>true</active>
    <businessProcess>Request for Reconsideration Support Process</businessProcess>
    <label>Request_for_Reconsideration</label>
</RecordType>