force-app/main/default/objects/Case/recordTypes/Star_Rating_Error.recordType-meta.xml
<RecordType>
    <fullName>Star_Rating_Error</fullName>
    <active>true</active>
    <businessProcess>Star Rating Dispute</businessProcess>
    <label>Star Rating Error</label>
</RecordType>