force-app/main/default/objects/Case/validationRules/Case_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),TEXT(Application__r.Application_Status__c)!=&quot;Closed&quot;, !ISNULL(Application__c),RecordType.DeveloperName=&quot;Request_for_Reconsideration&quot;)</errorConditionFormula>
    <errorMessage>Application must be Closed before a Reconsideration is Requested.</errorMessage>
</ValidationRule>