force-app/main/default/objects/Case/validationRules/Case_Creation_DuplicateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Creation_DuplicateCheck</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISNEW(),Application__r.Case_Record_Exists__c,RecordType.DeveloperName=&quot;Request_for_Reconsideration&quot;)</errorConditionFormula>
    <errorMessage>You cannot add more than one Reconsideration Request to the Application</errorMessage>
</ValidationRule>