force-app/main/default/objects/Case/validationRules/Case_Date_of_Reply_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Date_of_Reply_Future</fullName>
    <active>true</active>
    <errorConditionFormula>(RecordType.DeveloperName=&quot;Request_for_Information&quot; &amp;&amp; Date_of_Reply__c &gt; TODAY()) || (RecordType.DeveloperName=&quot;Request_for_Information&quot; &amp;&amp; Date_of_Reply__c &lt; Date_Requested__c)</errorConditionFormula>
    <errorMessage>&apos;Date of Reply&apos; cannot be future date and cannot be before &apos;Date RFI Sent&apos;.</errorMessage>
</ValidationRule>