force-app/main/default/objects/Case/validationRules/Case_Date_RFI_Sent_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Date_RFI_Sent_Future</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName=&quot;Request_for_Information&quot; &amp;&amp; Date_Requested__c &gt; Today()</errorConditionFormula>
    <errorMessage>&apos;Date RFI Sent&apos; cannot be future date.</errorMessage>
</ValidationRule>