force-app/main/default/objects/Case/validationRules/Case_RFI_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_RFI_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()),RecordType.DeveloperName=&quot;Request_for_Information&quot;,ISPICKVAL(PRIORVALUE(Status),&quot;RFI Completed&quot;))</errorConditionFormula>
    <errorMessage>RFI case cannot be edited once RFI completed</errorMessage>
</ValidationRule>