force-app/main/default/objects/Case/validationRules/Case_RFI_DueDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_RFI_DueDate</fullName>
    <active>true</active>
    <description>RFI Due Date cannot be less than 28 days from Date RFI Sent.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName=&quot;Request_for_Information&quot;,ISCHANGED(RFI_Due_Date__c),NOT(ISCHANGED(Status)),RFI_Due_Date__c &lt;  Date_Requested__c +28)</errorConditionFormula>
    <errorDisplayField>RFI_Due_Date__c</errorDisplayField>
    <errorMessage>RFI Due Date cannot be less than 28 days from Date RFI Sent.</errorMessage>
</ValidationRule>