force-app/main/default/objects/Case/validationRules/Case_Status_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Status_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(Text(Status)),Text(Status) = &apos;--None--&apos;)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Please select RFI Status</errorMessage>
</ValidationRule>