force-app/main/default/objects/Case/validationRules/Case_Status_Change_Permission.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Status_Change_Permission</fullName>
    <active>true</active>
    <description>This Validation rule is to stop QFR RC users to update case status</description>
    <errorConditionFormula>AND( ISCHANGED( Status ),
$Permission.QFR_Reasonableness_Check_User,
 RecordType.DeveloperName =&apos;QFR&apos;)</errorConditionFormula>
    <errorMessage>You don&apos;t have permission to change case status</errorMessage>
</ValidationRule>