force-app/main/default/objects/Case/validationRules/Expected_Completion_Date_Greater_QFR_Due.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Completion_Date_Greater_QFR_Due</fullName>
    <active>true</active>
    <description>Expected Completion Date must be greater than QFR Due Date</description>
    <errorConditionFormula>(Reporting_Due_Date__c) &gt;= (Expected_Completion_Date__c)</errorConditionFormula>
    <errorMessage>Expected Completion Date must be greater than QFR Due Date</errorMessage>
</ValidationRule>