force-app/main/default/objects/Case/validationRules/Expected_Completion_Date_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Completion_Date_is_Mandatory</fullName>
    <active>true</active>
    <description>Expected Completion Date is required on the condition of Request for Extension being selected</description>
    <errorConditionFormula>AND(Request_for_Extension__c = True, ISBLANK(Expected_Completion_Date__c))</errorConditionFormula>
    <errorMessage>Please enter Expected Completion Date</errorMessage>
</ValidationRule>