force-app/main/default/objects/Case/validationRules/Extension_Reason_must_be_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Extension_Reason_must_be_populated</fullName>
    <active>true</active>
    <description>Extension Reason must be populated.  If Extension Request is True, Extension Reason must be entered.</description>
    <errorConditionFormula>AND(Request_for_Extension__c,ISBLANK(Extension_Reason__c))</errorConditionFormula>
    <errorMessage>Please select Extension Reason</errorMessage>
</ValidationRule>