force-app/main/default/objects/Case/validationRules/NoDisputeMgmtCase.validationRule-meta.xml
<ValidationRule>
    <fullName>NoDisputeMgmtCase</fullName>
    <active>true</active>
    <description>Users cannot manually create dispute management cases from Case. They can only create dispute management cases from the hold or release process.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Dispute_Management&quot;, NOT(ISPICKVAL( Origin , &quot;System&quot;) ))</errorConditionFormula>
    <errorMessage>Cases of type Dispute Management can only be created through the hold/release process</errorMessage>
</ValidationRule>