force-app/main/default/objects/Case/listViews/Assessor.listView-meta.xml
<ListView>
    <fullName>Assessor</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Application__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Request_for_Information</value>
    </filters>
    <label>Assessor</label>
    <queue>Assessor</queue>
</ListView>